Add OLED module

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,5 +30,12 @@ lib_deps =
 	ArduinoHttpClient
 	ArduinoJson
 	DHT20
+    OLED
+    ; MFRC522_I2C
+    MFRC522 
+    ; miguelbalboa/MFRC522@^1.4.10
+    adafruit/Adafruit SSD1306
+    adafruit/Adafruit GFX Library
 	adafruit/DHT sensor library@^1.4.6
 	sinricpro/SinricPro@^2.11.0
+    
